# robot_model

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: costmap_common_params.yaml  pan_tilt_controllers.yaml
launch/: amcl.launch  outdoor_obstacle_ar.launch  robot_description.launch  robot_spawner.launch  small_city.launch  world.launch
urdf/: common_properties.xacro  pan_tilt.xacro  robot.gazebo  robot.xacro  visible_camera.xacro
worlds/: out_1.world  outdoor_obstacles_ar.world  outdoor_obstacles_multi_ar.world  small_city.world
