<?xml version="1.0"?>
<package format="2">
  <name>robot_model</name>
  <version>0.0.1</version>
  <description>The robot_model package</description>

  <maintainer email="tuialexandre@gmail.com">tuialexandre</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
